fix: 버튼이벤트로 스낵바 생성하도록 페이지 수정

--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -80,15 +80,15 @@ pre {
 	margin: 0 auto;
 }
 
-input,
-button {
-	font-size: inherit;
-	font-family: inherit;
-}
+/*input,*/
+/*button {*/
+/*	font-size: inherit;*/
+/*	font-family: inherit;*/
+/*}*/
 
-button:focus:not(:focus-visible) {
-	outline: none;
-}
+/*button:focus:not(:focus-visible) {*/
+/*	outline: none;*/
+/*}*/
 
 @media (min-width: 720px) {
 	h1 {
